#87 company/skill/education expand、collapse issue

--- a/src/main/webapp/less/SideSection.less
+++ b/src/main/webapp/less/SideSection.less
@@ -79,7 +79,7 @@
         white-space: nowrap;
         text-overflow: ellipsis;
         word-break: normal;
-        max-width: 180px;
+        max-width: 150px;
       }
     }
 
